k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feedhub-ingress
  namespace: feedhub
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: feedhub.jerry.world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: feed-hub-ui
                port:
                  number: 12002
